test/errors/modify_non_lval.correct
error: modify_non_lval.li:1:1: expected a modifiable expression
│ 10--;
│ ~~
│ ^
error: modify_non_lval.li:2:1: expected a modifiable expression
│ 10++;
│ ~~
│ ^
error: modify_non_lval.li:3:1: cannot assign to a non-variable expression
│ 10 += 1;
│ ~~~~~~~
│ ^
error: modify_non_lval.li:4:1: cannot assign to a non-variable expression
│ 10 -= 1;
│ ~~~~~~~
│ ^
error: modify_non_lval.li:5:1: cannot assign to a non-variable expression
│ 10 *= 1;
│ ~~~~~~~
│ ^
error: modify_non_lval.li:6:1: cannot assign to a non-variable expression
│ 10 /= 1;
│ ~~~~~~~
│ ^
error: modify_non_lval.li:7:1: cannot assign to a non-variable expression
│ 10 %= 1;
│ ~~~~~~~
│ ^
error: modify_non_lval.li:8:1: expected a modifiable expression
│ "Hello"++;
│ ~~~~~~~
│ ^
error: modify_non_lval.li:9:1: expected a modifiable expression
│ "Hello"--;
│ ~~~~~~~
│ ^
error: modify_non_lval.li:10:1: cannot assign to a non-variable expression
│ "Hello" += "World";
│ ~~~~~~~~~~~~~~~~~~
│ ^
error: modify_non_lval.li:11:1: cannot assign to a non-variable expression
│ "Hello" -= "World";
│ ~~~~~~~~~~~~~~~~~~
│ ^
error: modify_non_lval.li:12:1: cannot assign to a non-variable expression
│ "Hello" *= "World";
│ ~~~~~~~~~~~~~~~~~~
│ ^
error: modify_non_lval.li:13:1: cannot assign to a non-variable expression
│ "Hello" /= "World";
│ ~~~~~~~~~~~~~~~~~~
│ ^
error: modify_non_lval.li:14:1: cannot assign to a non-variable expression
│ "Hello" %= "World";
│ ~~~~~~~~~~~~~~~~~~
│ ^
error: modify_non_lval.li:15:1: variable true is not a number
│ true++;
│ ~~~~
│ ^
error: modify_non_lval.li:16:1: variable true is not a number
│ true--;
│ ~~~~
│ ^
error: modify_non_lval.li:17:1: invalid operators in assignment
│ true += false;
│ ~~~~~~~~~~~~~
│ ^
error: modify_non_lval.li:18:1: invalid operators in assignment
│ true -= false;
│ ~~~~~~~~~~~~~
│ ^
error: modify_non_lval.li:19:1: invalid operators in assignment
│ true *= false;
│ ~~~~~~~~~~~~~
│ ^
error: modify_non_lval.li:20:1: invalid operators in assignment
│ true /= false;
│ ~~~~~~~~~~~~~
│ ^
error: modify_non_lval.li:21:1: invalid operators in assignment
│ true %= false;
│ ~~~~~~~~~~~~~
│ ^
